2011-08-30  Roland Grunberg  <rgrunber@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
		Implement timer-mode support.
		(InfoAdapter): Check for timer-mode before running ophelp.
		(createDOM): Minor change to support creating a DOM without ophelp XML.
		(process): Don't attempt to find events if we are in timer-mode.
		(checkTimerSupport): New Method - Actual check for timer support
		(hasTimerSupport): Cached check for timer support.
	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java
		(handleModelData): Determine what flags to give ophelp depending on whether
		we are in timer-mode.
		(getEventNames): Determine what elements to check in ophelp XML depending on
		whether we are in timer-mode.
		(run): Check for timer-mode support here.
	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java
		(createXML): We do not need to set any event count in timer-mode.

2011-08-29  Roland Grunberg  <rgrunber@redhat.com>

	* op_error_key: New file that maps some error key word to the corresponding key
		value of the externalized string representing that error.
	* src/org/eclipse/linuxtools/oprofile/core/OprofileCorePlugin.java
		(getPluginLocation): New method
	* src/org/eclipse/linuxtools/oprofile/core/linux/OpControlErrorHandler.java
		(handleError): New class to handle errors from running opcontrol
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java
		(_runOpcontrol): Move error handling into OpcontrolErrorHandler.
	* src/org/eclipse/linuxtools/oprofile/core/oprofile.properties:
		Externalize "Events must be distinct" error.

2011-07-20  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/oprofile/core/linux/OpxmlRunner.java (getEventNames): 
	(handleModelData): Fix for Eclipse bug 341621.
	* src/org/eclipse/linuxtools/oprofile/core/linux/LinuxOpcontrolProvider.java (_runOpcontrol): Refactored due to above fix. 