@@ -1,3 +1,8 @@
+2011-09-02  Roland Grunberg  <rgrunber@redhat.com>
+
+	* src/org/eclipse/linuxtools/oprofile/core/opxml/modeldata/ModelDataAdapter.java:
+		(createXML): Add support for displaying statistics of library calls.
+
 2011-08-30  Roland Grunberg  <rgrunber@redhat.com>
 
 	* src/org/eclipse/linuxtools/oprofile/core/opxml/info/InfoAdapter.java:
